# wave_function_collapse

./: CMakeLists.txt  dune-project  input.ppm  out.ppm  readme.md
lib/: dune
src/: main.c  wfc.c  wfc.h  wfc_hashmap.c  wfc_hashmap.h
